--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,6 @@ a {
 }
 .content-box {
     width: 75%;
-    display: flex;
-    flex-direction: row;
     overflow: hidden;
     gap: 5px;
 }
@@ -315,9 +313,9 @@ a {
     width: 35%;
     order: 1;
     display: flex;
+    padding: 5px;
     flex-direction: column;
     background-color: #fff;
-    padding: 5px;
 }
 #section-one .special-heading {
     font-size: 24px;
@@ -503,16 +501,9 @@ a {
 .article-left {
   flex: 3;
 }
-.section-title {
-  color: green;
-  border-bottom: 2px solid #ddd;
-  padding-bottom: 5px;
-  margin-bottom: 15px;
-}
 .tab-content .article-item {
   background: #fff;
   display: flex;
-  gap: 10px;
   align-items: flex-start;
 }
 .tab-content .article-item img {
@@ -614,14 +605,14 @@ a {
     box-sizing: border-box;
     overflow: hidden;
 }
-.lead-articles {
+#section-two .lead-articles {
     width: 65%;
     display: flex;
     flex-wrap: wrap;
     background-color: #f2f3f2;
     gap: 5px;
 }
-.list-articles {
+#section-two .list-articles {
     width: 35%;
     background-color: #f2f3f2;
 }
@@ -633,7 +624,6 @@ a {
     background-color: #fff;
     padding: 5px;
     border: 1px solid #ddd;
-    box-sizing: border-box;
 }
 #section-two .article-item img {
     width: 100%;
@@ -645,7 +635,6 @@ a {
     font-size: 16px;
     margin: 0;
 }
-
 .list-articles {
     background-color: #019879;
     display: flex;
@@ -737,7 +726,17 @@ a {
     object-fit: cover;
     cursor: pointer;
 }
-
+.ads-3 {
+    width: 100%;
+    height: 110px;
+    overflow: hidden;
+}
+.ads-3 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+}
 
 ::-webkit-scrollbar {
   width: 8px; /* স্ক্রলবারের প্রস্থ */
@@ -754,4 +753,29 @@ a {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #555;  /* hover এ thumb রঙ */
+}
+
+
+.category-title {
+    width: 100%;
+    color: #019879;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 5px 0;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: #019879 3px double;
+    margin-bottom: 10px;
+}
+.category-title h2 {
+    font-size: 18px;
+    font-weight: bold;
+}
+.category-title a {
+    color: #019879;
+    text-decoration: none;
+    font-size: 12px;
+}
+.category-title a:hover {
+    color: #000;
 }
