--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,30 @@ a {
     flex-direction: column;
     overflow: hidden;
 }
+
+.category-title {
+    width: 100%;
+    color: #019879;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 5px 0;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: #019879 3px double;
+    margin-bottom: 10px;
+}
+.category-title h2 {
+    font-size: 18px;
+    font-weight: bold;
+}
+.category-title a {
+    color: #222;
+    text-decoration: none;
+    font-size: 16px;
+}
+.category-title a:hover {
+    color: #555;
+}
 /* General CSS */
 
 /* Top Bar CSS */
@@ -755,27 +779,45 @@ a {
   background-color: #555;  /* hover এ thumb রঙ */
 }
 
-
-.category-title {
+#section-three {
+    background-color: #f2f3f2;
+    padding-bottom: 50px;
+}
+.category-style-2 {
     width: 100%;
-    color: #019879;
-    font-size: 20px;
-    font-weight: bold;
-    padding: 5px 0;
+    order: 4;
+    overflow: hidden;
     display: flex;
-    justify-content: space-between;
-    border-bottom: #019879 3px double;
-    margin-bottom: 10px;
+    flex-wrap: wrap;
+    gap: 5px;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #ddd;
 }
-.category-title h2 {
-    font-size: 18px;
-    font-weight: bold;
+.category-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
 }
-.category-title a {
-    color: #019879;
-    text-decoration: none;
-    font-size: 12px;
+
+.category-item img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    border-radius: 5px;
 }
-.category-title a:hover {
+
+.category-item h4 {
+    font-size: 16px;
+    margin-top: 10px;
     color: #000;
+    font-weight: 600;
+}
+
+.category-item a {
+    text-decoration: none;
+}
+
+.category-item:hover h4 {
+    color: green;
 }
